<resources>
    <string name="loading">Loading...</string>
    <string name="phone_number_empty">Bạn chưa nhập số điện thoại</string>
    <string name="password_empty">Bạn chưa nhập mật khẩu</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_media_route_controller_no_info_available">No info available</string>
    <string name="mr_media_route_controller_pause">Pause</string>
    <string name="mr_media_route_controller_play">Play</string>
    <string name="mr_media_route_controller_settings_description">Route settings</string>
    <string name="mr_media_route_controller_stop">Stop casting</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="adobe_aviary_client_id_required">Client Id required</string>
    <string name="adobe_aviary_client_secret_required">Client Secret required</string>
    <string name="adobe_aviary_device_id_required">Device Id required</string>
    <string name="adobe_aviary_invalid_argument">Invalid argument</string>
    <string name="adobe_aviary_module_not_initialized">Module not initialized</string>
    <string name="adobe_aviary_unknown_error">Unknown Error</string>
    <string name="adobe_aviary_user_cancelled">User cancelled</string>
    <string name="adobe_aviary_user_interaction_required">User interaction required</string>
    <string name="adobe_aviary_username_password_required">Username and password required</string>
    <string name="com_adobe_image_recent">Recent</string>
    <string name="feather_acc_a_sticker">A sticker</string>
    <string name="feather_acc_color">Color</string>
    <string name="feather_acc_flip_h">Flip horizontal</string>
    <string name="feather_acc_flip_v">Flip vertical</string>
    <string name="feather_acc_lens_toggle">Toggle zoom</string>
    <string name="feather_acc_rotate_ccw">Rotate counter clockwise</string>
    <string name="feather_acc_rotate_cw">Rotate clockwise</string>
    <string name="feather_acc_size">Size</string>
    <string name="feather_activate">Activate</string>
    <string name="feather_activity_not_found">"Sorry, there's no application on your device to handle this action. Do you want to download it now from the market?"</string>
    <string name="feather_adjust">Orientation</string>
    <string name="feather_an_error_occurred">An error occurred</string>
    <string name="feather_apply">Apply</string>
    <string name="feather_applying_actions">Applying actions…</string>
    <string name="feather_ask_to_login_before_restore">If you have previously logged in with an Adobe ID, sign in to restore synced supplies</string>
    <string name="feather_attention">Attention</string>
    <string name="feather_blemish">Blemish</string>
    <string name="feather_blemish_tool_tip">Just tap</string>
    <string name="feather_blur">Blur</string>
    <string name="feather_borders">Frames</string>
    <string name="feather_borders_dialog_first_time">"Install Aviary's free pack of beautiful high resolution frames to get started."</string>
    <string name="feather_brightness">Brightness</string>
    <string name="feather_cant_undo_anymore">Can’t undo any more</string>
    <string name="feather_circle">Circle</string>
    <string name="feather_close">Close</string>
    <string name="feather_colorfix">Color Fix</string>
    <string name="feather_colorsplash_eraser">Eraser</string>
    <string name="feather_colorsplash_free">Free Color</string>
    <string name="feather_colorsplash_smart">Smart Color</string>
    <string name="feather_contrast">Contrast</string>
    <string name="feather_crop">Crop</string>
    <string name="feather_custom">Custom</string>
    <string name="feather_delete">Delete</string>
    <string name="add_new_address">Thêm địa chỉ mới</string>
    <string name="all">Tất cả</string>
    <string name="back_to_main">Quay về trang chủ</string>
    <string name="city">Tỉnh, Thành phố</string>
    <string name="close">Đóng</string>
    <string name="confirm_address">Hãy chắc chắn rằng địa chỉ này là chính xác để bạn có thể giao/nhận hàng đúng thời hạn</string>
    <string name="copy_share_link">Sao chép link chia sẻ</string>
    <string name="delete">Xóa</string>
    <string name="district">Quận, Huyện</string>
    <string name="edit">Sửa</string>
    <string name="good">Tốt</string>
    <string name="good_des">Sản phẩm đã qua sử dụng - chất lượng cao</string>
    <string name="goodish">Khá tốt</string>
    <string name="goodish_des">Sản phẩm đã qua sử dụng - chất lượng đảm bảo</string>
    <string name="hamlet">Số nhà, Xóm, Tổ..v.v..</string>
    <string name="like_new">Gần như mới</string>
    <string name="like_new_des">Sản phẩm dùng lướt - chất lượng như mới</string>
    <string name="new_">Mới</string>
    <string name="new_des">Sản phẩm mới 100% nguyên seal chưa qua sử dụng</string>
    <string name="old">Cũ</string>
    <string name="old_des">Sản phẩm cũ</string>
    <string name="set_default">Đặt mặc định</string>
    <string name="ward">Phường, Xã, Thị trấn</string>
    <string name="warning_report">Báo cáo vi phạm</string>
</resources>