<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/common_padding_small"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/layout_white_bg_top_border"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/divider" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/layout_white_bg_no_corner"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/divider" />

        <Button
            android:id="@+id/btnSetDefault"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/layout_white_bg_bottom_corner"
            android:text="@string/set_default"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/common_padding_small"
            android:background="@drawable/layout_red_bg_corner"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
</RelativeLayout>