<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/white"
    android:gravity="right"
    android:orientation="vertical">

    <include layout="@layout/nav_bar_custom" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:inputType="none"
                android:focusableInTouchMode="false"
                android:hint="@string/city"
                android:padding="10.0dip"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray"
                android:textSize="14.0sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:background="@color/gray" />

            <EditText
                android:id="@+id/edtDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:inputType="none"
                android:focusableInTouchMode="false"
                android:hint="@string/district"
                android:padding="10.0dip"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray"
                android:textSize="14.0sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:background="@color/gray" />

            <EditText
                android:id="@+id/edtWard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:inputType="none"
                android:focusableInTouchMode="false"
                android:hint="@string/ward"
                android:padding="10.0dip"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray"
                android:textSize="14.0sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:background="@color/gray" />

            <EditText
                android:id="@+id/edtHamlet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:hint="@string/hamlet"
                android:padding="10.0dip"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray"
                android:textSize="14.0sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/llDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cbDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dip"
                    android:button="@drawable/checkbox"
                    android:paddingLeft="10.0dip"
                    android:text="@string/set_default"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dip"
                    android:background="@color/gray" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10.0dip"
                android:text="@string/confirm_address"
                android:textColor="@android:color/black"
                android:textSize="14.0sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/txtFinish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_small"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="20.0dip"
                android:background="@drawable/layout_red_bg_corner"
                android:gravity="center"
                android:padding="10.0dip"
                android:text="@string/add_new_address"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>