<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    
    <include layout="@layout/nav_bar_custom" />

    <RelativeLayout
        android:id="@+id/layout_all_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_padding_medium"
        android:layout_marginTop="@dimen/common_padding_medium"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/all"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/allSateCheckMark"
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/check_mark"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/layout_state_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/new_"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNew"
            android:paddingBottom="10.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="2.0dip"
            android:text="@string/new_des"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/gray_dark" />

        <ImageView
            android:id="@+id/newCheckMark"
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/check_mark"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/layout_state_like_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLikeNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/like_new"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLikeNew"
            android:paddingBottom="10.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="2.0dip"
            android:text="@string/like_new_des"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/gray_dark" />

        <ImageView
            android:id="@+id/likeNewCheckMark"
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/check_mark"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/layout_state_good"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtGood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/good"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtGood"
            android:paddingBottom="10.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="2.0dip"
            android:text="@string/good_des"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/gray_dark" />

        <ImageView
            android:id="@+id/goodCheckMark"
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/check_mark"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/layout_state_goodish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtGoodish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/goodish"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtGoodish"
            android:paddingBottom="10.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="2.0dip"
            android:text="@string/goodish_des"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/gray_dark" />

        <ImageView
            android:id="@+id/goodishCheckMark"
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/check_mark"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/layout_state_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/old"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtOld"
            android:paddingBottom="10.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="2.0dip"
            android:text="@string/old_des"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/gray_dark" />

        <ImageView
            android:id="@+id/oldCheckMark"
            android:layout_width="15.0dip"
            android:layout_height="20.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/check_mark"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/divider" />
</LinearLayout>